// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostHeaderTimestamp - Snapshots > matches snapshot with "just now" 1`] = `
<div
  class="flex flex-shrink-0 items-center gap-1"
  data-testid="container"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-clock size-4 text-muted-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 6v6l4 2"
    />
  </svg>
  <span
    class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground"
    data-testid="typography"
  >
    just now
  </span>
</div>
`;

exports[`PostHeaderTimestamp - Snapshots > matches snapshot with days 1`] = `
<div
  class="flex flex-shrink-0 items-center gap-1"
  data-testid="container"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-clock size-4 text-muted-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 6v6l4 2"
    />
  </svg>
  <span
    class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground"
    data-testid="typography"
  >
    3d
  </span>
</div>
`;

exports[`PostHeaderTimestamp - Snapshots > matches snapshot with hours 1`] = `
<div
  class="flex flex-shrink-0 items-center gap-1"
  data-testid="container"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-clock size-4 text-muted-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 6v6l4 2"
    />
  </svg>
  <span
    class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground"
    data-testid="typography"
  >
    2h
  </span>
</div>
`;

exports[`PostHeaderTimestamp - Snapshots > matches snapshot with minutes 1`] = `
<div
  class="flex flex-shrink-0 items-center gap-1"
  data-testid="container"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-clock size-4 text-muted-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 6v6l4 2"
    />
  </svg>
  <span
    class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground"
    data-testid="typography"
  >
    5m
  </span>
</div>
`;
